create and pass to parse new game name and date/times...next: add items to the game

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,13 +47,24 @@
     <string name="label_joingame">Join a Game</string>
       
       <!-- New Game Create -->
-    <string name="prompt_newgamename">What would you like to name your new game?</string>
-    <string name="hint_newgamename">e.g. Classic Cars Hunt</string>
-    
+    <string name="prompt_newgamename">Name your new game.</string>
+    <string name="hint_newgamename">New game name</string>
+    <string name="label_createGame">Create New Game</string>
+    <string name="hint_startDate">Start Date</string>
+    <string name="hint_startTime">Start Time</string>
+    <string name="hint_endDate">End Date</string>
+    <string name="hint_endTime">End Time</string>
+    <string name="hint_newGameName">Sample Game Name</string>
+    <string name="label_startDatetime">Start Date/Time:</string>
+    <string name="label_endDatetime">End Date/Time:</string>
+    <string name="button_create">Create</string>
+      
       <!-- Game Items Manage -->
     <string name="header_itemlist">Items to find for this game:</string>
     <string name="label_additem">Add Item</string>
     <string name="hint_additem">Add item? e.g. Yellow Volkswagen</string>
+    <string name="hint_newgamestartdate">Enter game start date</string>
+    <string name="hint_newgameenddate">Enter game end date</string>
+    <string name="label_gameName">Game Name:</string>
     
-
 </resources>
