fixing small errors

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,14 +7,13 @@
     <string name="splash_welcome">Get ready to play!</string>
     
      <!-- Generic --> 
-    <string name="label_cancel">Cancel</string>
+    <string name="label_cancel">Back to Main Menu</string>
     <string name="label_continue">Continue</string>
     <string name="label_done">Done</string>
     
     <string name="parse_app_id">U1Z0VQYTMUfghoykmoq2hUGtwOZbNHgSQVhzMMCM</string>
     <string name="parse_client_id">zfavLPMBkK1u0edMDb3QAAabyJJAziEfmakAkYSN</string>
-    
-    
+        
         <!-- Menu Options -->
     <string name="option_menu_about">About</string>
     <string name="option_menu_prefs">Preferences</string>
