--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="splash_welcome">Get ready to play!</string>
     
      <!-- Generic --> 
-    <string name="label_cancel">Back to Main Menu</string>
+    <string name="label_cancel">Cancel</string>
     <string name="label_continue">Continue</string>
     <string name="label_done">Done</string>
     
