--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="label_loginUsernameAlreadyExists">Already a user with that username.  Please choose a new username</string>
     <string name="label_loginEmailAlreadyExists">Already a user with that email address.  Please choose a new email</string> 
     <string name="label_selectOption">What would you like to do?</string>
-    <string name="label_newgame">Start a new Game</string>
+    <string name="label_newgame">Create new Game</string>
     <string name="label_mygames">View My Games</string>
     <string name="label_gamesiamplaying">View Games I am Playing</string>
     <string name="label_joingame">Join a Game</string>
@@ -61,9 +61,19 @@
       <!-- Game Items Manage -->
     <string name="header_itemlist">Items to find for this game:</string>
     <string name="label_additem">Add Item</string>
-    <string name="hint_additem">Add item? e.g. Yellow Volkswagen</string>
+    <string name="hint_additem">Add item?</string>
     <string name="hint_newgamestartdate">Enter game start date</string>
     <string name="hint_newgameenddate">Enter game end date</string>
     <string name="label_gameName">Game Name:</string>
+    
+      <!-- Game List -->
+    <string name="label_itemList">Item List</string>
+    <string name="button_edit">Edit</string>
+    <string name="label_currentGamePlayers">Current Game Players</string>
+    <string name="button_back">Back</string>
+    <string name="header_gamelist">Game List</string>
+    <string name="hint_addplayer">Add Player hint</string>
+    <string name="label_addplayer">Add Player label</string>
+    <string name="header_playerlist">Player List</string>
     
 </resources>
