my games list working.  next do view game activity and layout.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -76,4 +76,6 @@
     <string name="label_addplayer">Add Player label</string>
     <string name="header_playerlist">Player List</string>
     
+    <string name="header_mygameslist">My Games</string>
+    <string name="mygameslistButton_done">Done</string>
 </resources>
