--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name= "editgamebutton_edititems">Edit Items</string>
     <string name="editgamebutton_editplayers">Edit Players</string>
     <string name="label_editgamenametime">Save Changes</string>
-    
+    <string name="button_addItem">Add Item</string>
+    <string name="hint_addItem">Type Item here</string>
 </resources>
