--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -90,4 +90,5 @@
     <string name="button_mainmenu">Main Menu</string>
     <string name="hint_addItem">Type Item here</string>
     <string name="button_edititems">Edit Items</string>
+    <string name="label_currentGameItems">Items</string>
 </resources>
