Join a Game takes to list of games...still need to figure out how to filter so only shows games current user has been invited to.  Is set up now to allow coding of game play while I figure that out.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -91,4 +91,6 @@
     <string name="hint_addItem">Type Item here</string>
     <string name="button_edititems">Edit Items</string>
     <string name="label_currentGameItems">Items</string>
+    <string name="header_Currentgameslist">Current Games</string>
+    
 </resources>
