--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -90,11 +90,21 @@
     <string name="button_mainmenu">Main Menu</string>
     <string name="hint_addItem">Type Item here</string>
     <string name="button_edititems">Edit Items</string>
+    
     <string name="label_currentGameItems">Items</string>
     <string name="header_Currentgameslist">Current Games</string>
     <string name="title_activity_game_hub">Games</string>
     <string name="title_activity_invited_game">Invited Games</string>
     <string name="invited_games_instructions">Click to Play!</string>
     <string name="button_update">Update</string>
-    <string name="hint_itemslist">Check off each item when found &amp; \'Update\'</string>
+    <string name="hint_itemslist">Click each item when found</string>
+    <string name="title_enddatetime">End Date and Time:</string>
+    <string name="text_enddate">End Date and Time</string>
+    <string name="title_remainingitems">Remaining Items:</string>
+    <string name="hint_itemlist">Touch item to mark as found</string>
+    <string name="title_gamename">Game Name</string>
+    
+        <!-- Found Item Dialog -->
+    <string name="dialog_found">Yes, I found it!</string>
+    <string name="dialog_cancel">Cancel</string>
 </resources>
