Game timed out dialog opens if end date has passed.  'winner' column added to game parse table when user finds all items.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -101,4 +101,7 @@
         <!-- Found Item Dialog -->
     <string name="dialog_found">Yes, I found it!</string>
     <string name="dialog_cancel">Cancel</string>
+    
+    <string name="alreadyWon">Another player just won. Thanks for playing!</string>
+    <string name="gameTimedOut">This game has timed out.</string>
 </resources>
