--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -104,4 +104,5 @@
     
     <string name="alreadyWon">Another player just won. Thanks for playing!</string>
     <string name="gameTimedOut">This game has timed out.</string>
+    <string name="youWin">Congratulations! You Win!</string>
 </resources>
