--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,8 +8,8 @@
     
      <!-- Generic --> 
     <string name="label_cancel">Cancel</string>
-    <string name="label_continue">Continue</string>
-    <string name="label_done">Done</string>
+    <string name="label_continue">Save</string>
+    <string name="label_done">Save</string>
     
     <string name="parse_app_id">U1Z0VQYTMUfghoykmoq2hUGtwOZbNHgSQVhzMMCM</string>
     <string name="parse_client_id">zfavLPMBkK1u0edMDb3QAAabyJJAziEfmakAkYSN</string>
@@ -40,10 +40,10 @@
     <string name="label_loginUsernameAlreadyExists">Already a user with that username.  Please choose a new username</string>
     <string name="label_loginEmailAlreadyExists">Already a user with that email address.  Please choose a new email</string> 
     <string name="label_selectOption">What would you like to do?</string>
-    <string name="label_newgame">Create new Game</string>
-    <string name="label_mygames">View My Games</string>
+    <string name="label_newgame">Create New Game</string>
+    <string name="label_mygames">Edit My Games</string>
     <string name="label_gamesiamplaying">View Games I am Playing</string>
-    <string name="label_joingame">Join a Game</string>
+    <string name="label_joingame">Play Game</string>
       
       <!-- New Game Create -->
     <string name="prompt_newgamename">Name your new game.</string>
